Fix spacing issues

--- a/assets/css/sensei-course-theme/lesson-module.scss
+++ b/assets/css/sensei-course-theme/lesson-module.scss
@@ -4,8 +4,8 @@
 	line-height: 1.2;
 	font-weight: 400;
 	text-transform: uppercase;
-	margin-top: 0;
-	margin-bottom: 15px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	font-style: normal;
 	display: block;
 }
